--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/lineOfDate"
         android:layout_width="0dp"
         android:layout_height="30dp"
-        android:id="@+id/lineOfDate"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView4"
-        android:orientation="horizontal">
+        app:layout_constraintTop_toBottomOf="@id/textView4">
 
         <TextView
             android:id="@+id/tv_month"
@@ -98,14 +98,14 @@
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/dataList"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dataView"
         android:layout_width="24dp"
         android:layout_height="0dp"
         android:layout_marginBottom="20dp"
-        app:layout_constraintTop_toBottomOf="@id/lineOfDate"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lineOfDate"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="73dp" />
 
@@ -115,8 +115,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="20dp"
-        app:layout_constraintLeft_toRightOf="@id/dataList"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/dataView"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lineOfDate" />
 
